# chessito

./: .icarukTime.json  Cargo.toml  README.md  asset_build_process.md  build.md  compress_wav_files.ps1  index.html  index_style.html  programming_convention.md
board/: Cargo.toml
board/src/: contre_kt.txt  lib.rs
board/txt/: old_perf_test.txt
board_console/: Cargo.toml
board_console/src/: main.rs
board_graphic/: Cargo.toml  credit.txt  credit_old.txt
board_graphic/export/: itch_io_description.txt
board_graphic/export/chess_by_mewily/: index.html
board_graphic/export/chess_by_mewily/web/: miniquad.js  quad-timestamp.js
board_graphic/src/: game_ui.rs  main.rs
board_graphic/src/board_graphic/: ai.rs  draw.rs  game.rs  input.rs  mod.rs  piece_selector.rs  update.rs
board_graphic/src/menu/: menu.rs  mod.rs
board_graphic/src/shader/: fragment.glsl
game_engine/: Cargo.toml
game_engine/src/: lib.rs
game_engine/src/context/: asset_manager.rs  audio.rs  camera.rs  context.rs  ctx_event.rs  ctx_time.rs  mod.rs  pen.rs  perf.rs
game_engine/src/game/: game.rs  game_runner.rs  input.rs  mod.rs
game_engine/src/graphics/: mod.rs  sprite.rs
game_engine/src/input/: input_wrapper.rs  mod.rs
game_engine/src/wrapper/: basic_wrapper.rs  font_wrapper.rs  image_wrapper.rs  mod.rs  sound_wrapper.rs  texture_wrapper.rs
img/: title.pdn
macro_asset_loader/: Cargo.toml
macro_asset_loader/src/: generate_asset.rs  lib.rs
math/: credit.txt
math/src/: lib.rs
quantum/: Cargo.toml
text_extension/: Cargo.toml
ui/: Cargo.toml  credit.txt
ui/src/: lib.rs  (+3 more)
(+51 files in other folders)
