[package]
name = "board_graphic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["chantal_design"]
chantal_design = []

[dependencies]
game_engine = { path = "../game_engine" }
board = { path = "../board" }
macro_asset_loader = { path = "../macro_asset_loader" }
ui = { path = "../ui" }

smallvec = "1.13.2"
macroquad = { version = "0.4.8", features = ["audio"] }

# quad-timestamp = "=0.1.2"


[package.metadata.android]
assets = "assets/"

#[package.metadata.android.activity_attributes]
#"android:exported" =  "true"