[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = { path = "../math" }
util = { path = "../util" }

#macro_procedural = { path = "../macro_procedural" }
macroquad = { version = "0.4.8", features = ["audio"] }