[package]
name = "macro_asset_loader"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.55", features = ["full", "extra-traits"] }
quote = "1.0.10"
proc-macro2 = "1.0.79"